--- a/src/view/style/fitness-style.css
+++ b/src/view/style/fitness-style.css
@@ -9,35 +9,8 @@
   box-sizing: border-box;
 }
 
-body {
-  background-image: url('../assets/background.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
 hr {
   visibility: hidden;
-}
-
-.navbar {
-  background-color: #226bca;
-  border-bottom: 1px solid black;
-  padding: 0.5rem 1rem;
-}
-
-.nav-itens {
-  list-style: none;
-  display: flex;
-}
-
-.nav-itens>li {
-  padding-left: 20px;
-}
-
-.navbar-brand img {
-  width: 120px;
-  height: auto;
 }
 
 .search {
@@ -47,6 +20,9 @@ hr {
 }
 
 .search .form-control {
+  background-color: #eeeeeeb0;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(16px) saturate(180%);
   max-width: 100%;
   border: 1px solid black;
 }
@@ -78,6 +54,11 @@ hr {
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 4px;
+  text-shadow:
+    1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000;
 }
 
 .abertura-2 {
@@ -88,8 +69,14 @@ hr {
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 4px;
+  text-shadow:
+    1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000;
 }
 
+/* Form de cadastro e login */
 .opt-f {
   height: 35px;
 }
@@ -119,169 +106,7 @@ hr {
   right: 10px;
   top: 10px;
 }
-
-#password, #confpswd, #email, #username {
-  box-shadow: 0 0 10px 6px rgba(207, 207, 207, 0.541);
-}
-
-li .login {
-  cursor: pointer;
-  text-decoration: none;
-  right: 20px;
-  position: absolute;
-  padding-top: 8px;
-}
-
-.usr-img {
-  width: 25px;
-  border-radius: 15px;
-  background-color: #fff;
-}
-
-li.nav-item-1 {
-  height: 25px;
-  top: 50%;
-}
-
-/* categorias */
-
-.icons-main {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 10px;
-}
-
-.plant-container {
-  padding: 8px 8px 8px 9px;
-  border-color: 1px solid rgba(0, 0, 0, 0.31);
-  border-radius: 5px;
-  background-color: rgba(0, 58, 0, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.plant-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(129, 129, 129, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(228, 180, 21, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(209, 209, 209, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-
-.fit-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: #226bca;
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.fit-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-/* Conversor */
-aside {
-  display: none;
-  z-index: 2;
-  position: fixed;
-  top: 110px;
-  left: 11%;
-  transform: translateX(-50%);
-  background-color: rgba(207, 207, 207, 0.391);
-  height: auto;
-  width: 90%;
-  max-width: 380px;
-  justify-content: center;
-  text-align: center;
-  border-radius: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.27);
-  backdrop-filter: blur(15px);
-  text-shadow: 9px 6px 6px rgba(0, 0, 0, 0.36);
-  padding: 20px;
-}
-
-.btn-1 {
-  margin-bottom: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.27);
-  border-radius: 7px;
-  width: auto;
-  padding: 8px;
-  font-size: 16px;
-  background-color: rgba(207, 207, 207, 0.472);
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.btn-1:hover {
-  background-color: rgba(207, 207, 207, 0.6);
-}
-
 /* Cards */
-
 .categorias-main {
   display: flex;
   justify-content: center;
@@ -294,7 +119,7 @@ aside {
   justify-content: center;
   position: relative;
   margin: 0;
-  color: #226bca;
+  color: black;
   right: 31rem;
 }
 
@@ -314,14 +139,13 @@ aside {
 }
 
 .cartao {
-  background: #fff;
+  background-color: #eeeeeeb0;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(16px) saturate(180%);
+  border: 1px solid rgba(0, 0, 0, 0.42) 80%;
   border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
 }
 
 .cartao:hover {
@@ -360,61 +184,17 @@ aside {
   align-items: center;
 }
 
-/* Footer */
-.footer {
-  padding: 2rem 1rem;
-  background-color: #ffffff;
-  color: #666873;
-  margin-top: 2rem;
-  border-top: 1px solid black;
-}
-
-.footer-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
-.footer-top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-}
-
-.footer-title {
-  font-size: 1.8rem;
-  color: #666873;
-  font-weight: 500;
-  margin-bottom: 1rem;
-  margin: auto;
-  display: flex;
-}
-
-.footer-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  list-style: none;
-}
-
-.footer-list-link {
-  text-decoration: none;
-  color: inherit;
+.copyright {
+  color: black;
   transition: color 0.25s;
+  text-decoration-color: #353535;
 }
 
-.footer-list-link:hover {
-  color: #333;
+.copyright:hover {
+  color: #353535;
+  text-decoration-color: #353535;
 }
 
-.footer-divider {
-  margin: 2rem 0;
-  border: none;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
 
 /* Media Queries */
 @media (max-width: 768px) {
@@ -438,16 +218,10 @@ aside {
     flex-direction: column;
     text-align: center;
   }
-
-  aside {
-    left: 50%;
-  }
-
   #navbarSupportedContent {
     visibility: visible;
     display: flexbox;
   }
-
   .input,
   .btn-r {
     width: 100%;
@@ -462,10 +236,6 @@ aside {
 
   .caro1 img {
     height: 200px;
-  }
-
-  aside {
-    left: 50%;
   }
 
   .cards {
