--- a/src/view/style/imports/navbar.css
+++ b/src/view/style/imports/navbar.css
@@ -9,6 +9,11 @@
     backdrop-filter: blur(16px) saturate(180%);
     /* border: 1px solid rgba(0, 0, 0, 0.42) 80%; */
     z-index: 1000;
+    border-bottom: #353535 1px solid;
+}
+
+hr {
+    display: block;
 }
 
 .nav-itens {
