--- a/src/view/style/login-style.css
+++ b/src/view/style/login-style.css
@@ -41,14 +41,15 @@ body {
 
 .container-2 {
   margin-top: 10px;
-  background-image: url('../assets/background-main.webp');
+  background-image: url('../assets/prato.jpg');
+    background-size: cover; 
+  background-repeat: no-repeat;
+  background-position: center;  
   background-color: #fcfcfc;
   height: 60%;
   width: 240px;
   padding: 10px 10px 10px 10px;
   display: flex;
-  justify-content: center;
-  align-content: center;
   border-radius: 15px;
 }
 
@@ -78,14 +79,6 @@ hr {
   justify-content: center;
   align-items: center;  
   height: 100vh;
-}
-
-.navbar-brand {
-}
-
-.navbar-brand img {
-  height: 100px;
-  width: auto;
 }
 
 .modal-content{
@@ -166,170 +159,3 @@ li .login {
 .form-link {
   margin: 10px;
 }
-/* Conversor */
-/* aside {
-  display: none;
-  z-index: 2;
-  font-family: "Itim", cursive;
-  font-weight: 100;
-  font-style: normal;
-  position: fixed;
-  top: 150px;
-  left: 11%;
-  transform: translateX(-50%);
-  background-color: rgba(207, 207, 207, 0.391);
-  height: auto;
-  width: 90%;
-  max-width: 380px;
-  justify-content: center;
-  text-align: center;
-  border-radius: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.27);
-  backdrop-filter: blur(15px);
-  text-shadow: 9px 6px 6px rgba(0, 0, 0, 0.36);
-  padding: 20px;
-} */
-
-.btn-1 {
-  margin-bottom: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.27);
-  border-radius: 7px;
-  width: auto;
-  padding: 8px;
-  font-size: 16px;
-  background-color: rgba(207, 207, 207, 0.472);
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.btn-1:hover {
-  background-color: rgba(207, 207, 207, 0.6);
-}
-
-/* Media Queries */
-/* @media (max-width: 768px) {
-  .navbar-brand img {
-    width: 100px;
-  }
-
-  .caro1 {
-    height: 300px;
-  }
-
-  .caro1 img {
-    height: 300px;
-  }
-
-  .search {
-    margin: 0 1rem;
-  }
-
-  .footer-top {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  aside {
-    left: 50%;
-  }
-
-  #navbarSupportedContent {
-    visibility: visible;
-    display: flexbox;
-  }
-
-  .input,
-  .btn-r {
-    width: 100%;
-    max-width: 280px;
-  }
-}
-
-@media (max-width: 480px) {
-  .caro1 {
-    height: 200px;
-  }
-
-  .caro1 img {
-    height: 200px;
-  }
-
-  aside {
-    left: 50%;
-  }
-
-  .cards {
-    padding: 1rem;
-  }
-
-  .cartao {
-    margin-bottom: 1rem;
-  }
-
-  .footer-list {
-    gap: 1rem;
-  }
-}
-@media (max-width: 768px) {
-  .navbar-brand img {
-    width: 100px;
-  }
-
-  .caro1 {
-    height: 300px;
-  }
-
-  .caro1 img {
-    height: 300px;
-  }
-
-  .search {
-    margin: 0 1rem;
-  }
-
-  .footer-top {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  aside {
-    left: 50%;
-  }
-
-  #navbarSupportedContent {
-    visibility: visible;
-    display: flexbox;
-  }
-
-  .input,
-  .btn-r {
-    width: 100%;
-    max-width: 280px;
-  }
-}
-
-@media (max-width: 480px) {
-  .caro1 {
-    height: 200px;
-  }
-
-  .caro1 img {
-    height: 200px;
-  }
-
-  aside {
-    left: 50%;
-  }
-
-  .cards {
-    padding: 1rem;
-  }
-
-  .cartao {
-    margin-bottom: 1rem;
-  }
-
-  .footer-list {
-    gap: 1rem;
-  }
-} */
